fix the margin of ceate new task to  align  it with logo

--- a/src/components/MainHeader.css
+++ b/src/components/MainHeader.css
@@ -58,8 +58,8 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		margin: 0;
-		padding: 0;
+		margin: 1em  0 1em 0;
+		/* padding: 0; */
 	}
 	
 	#header-nav div {
@@ -90,7 +90,7 @@
 		list-style: none;
 		display: flex;
 		gap: 1em;
-		margin: 0;
+		margin: 0 0 0 1em;
 	
 		li {
 			padding: 0.3em;
